{
    "name": "keyboardMoveAction",
    "maps": [
        {
            "name": "Player",
            "id": "18c68562-cc90-47eb-add9-4ff6b0f35ce4",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "292d4fdf-12a7-4e66-a6e6-ba5c510defb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "47b49755-e0e5-493e-bb25-9df2b54fe452",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "196dda46-0ae1-488c-9d13-fc4c10452d0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveBackward",
                    "type": "Button",
                    "id": "b8c0a1da-2eab-4a95-9044-fc25ac11e143",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "5025c9a4-85e6-4672-9c6b-174483a2dd0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50ef7ebc-2e66-49af-8c1b-8a2b382753e6",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6852238a-aa6b-4267-8cde-756e10b2235b",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a7d70f9-d472-4db0-9d89-f922b1287589",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a98b8cd5-b78d-4802-bfda-2f4fb3f8ee8c",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9f24eac-72e7-4872-9146-199cda76cff6",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}